--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-non-typescript",
+  "name": "template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,12 +10,20 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.5",
+    "bootstrap": "^5.2.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.2.3",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "serverless-mysql": "^1.5.5",
+    "swr": "^2.1.3",
     "tailwindcss": "3.3.1"
   }
 }
