--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "daisyui": "^2.51.5",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "mysql": "^2.18.1",
@@ -23,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-scripts": "^2.1.3",
+    "react-select": "^5.7.2",
     "serverless-mysql": "^1.5.5",
     "swr": "^2.1.3",
     "tailwindcss": "3.3.1"
