--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
+    "axios-hooks": "^4.0.0",
     "bootstrap": "^5.2.3",
     "daisyui": "^2.51.5",
     "eslint": "8.38.0",
